feat: add POS staff user management
